--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,14 @@
 * {
   font-family: "Hanken Grotesk", sans-serif;
 }
+
+.Profil_Btn {
+    text-decoration: none;
+    color: black;
+    padding: 0;
+}
+
+.Profil_Btns{
+  margin-right: 25px;
+}
+
