--- a/src/@dashboard/Components/Topbar/Topbar.scss
+++ b/src/@dashboard/Components/Topbar/Topbar.scss
@@ -130,6 +130,8 @@
 
       .data {
         background-color: #f4f3f9;
+        margin-inline-start: 8px;
+
         h5 {
           color: black;
           background-color: #f4f3f9;
