--- a/src/@dashboard/Components/search/search.scss
+++ b/src/@dashboard/Components/search/search.scss
@@ -5,6 +5,7 @@
   background-color: #f3f3f9;
   border-radius: 6px;
   padding: 6px 0;
+   margin-inline-start: 6px;
 
   &__btn {
     background-color: transparent;
