--- a/src/@dashboard/Components/search/search.scss
+++ b/src/@dashboard/Components/search/search.scss
@@ -1,3 +1,5 @@
+@import "@scss/utils/mixins";
+
 .search {
   position: relative;
   display: flex;
@@ -6,6 +8,12 @@
   border-radius: 6px;
   padding: 6px 0;
    margin-inline-start: 6px;
+   @include responsiveView {
+    display:none;
+    padding: 0;
+    margin-inline-start: 2px;
+
+   }
 
   &__btn {
     background-color: transparent;
