--- a/src/@dashboard/Pages/Category/Category.scss
+++ b/src/@dashboard/Pages/Category/Category.scss
@@ -1,5 +1,97 @@
+
+
 .Category_Container{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    background-color: black;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    
+
+    .Tabel_Header{
+        background: url(/src/assets//Images/ddr.jpg) center / cover ;
+        width: 100%;
+        height: 10%;
+        background-color: #fff4;
+        padding: 2rem 1rem;
+        border-radius: 50px;
+        .Title{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        h1{
+            font-size: 40px;
+            font-weight: bold;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            color: #fff;
+        }
+        .Btn{
+            padding: 5px 25px;
+            border-radius: 5px;
+            border: 1px solid #eee;
+            background-color: #fff1;
+            color: #fff;
+            border-color: #fff1;
+            list-style: none;
+            text-decoration: none;
+            &:hover{
+                background-color: #fff;
+                border-color: #fff;
+                color: black;
+
+
+
+            }
+        
+        }
+    }
+        .Tabel_Body{
+            width: 95%;
+            max-height: calc(89% - 0.8rem);
+        }
+    
+        
+    }
+
+
+    table,th,td{
+        padding: 1.5rem;
+        &:hover{
+            background-color: #fff2;
+        }
+    }
+
+    table{
+        opacity: 0.9;
+        backdrop-filter:blur(7px);
+        overflow: hidden;
+        background-color: #fffb;
+        border-radius: 20px;
+        text-align: center;
+        box-shadow: 0 .2rem .4rem #fff4;
+
+        Thead{
+            th{
+                background-color: #d5d1defe;
+            }
+
+        }
+        tbody{ 
+            tr{
+                &:hover{
+                    background-color: #fff6;
+                }
+
+            }
+
+            img{
+                width: 38px;
+                height: 38px;
+                border-radius: 50%;
+                margin-right: 5rem;
+                vertical-align: middle;
+
+            }
+        }
+
+    }
 }
