--- a/src/@dashboard/Pages/Main/Main.scss
+++ b/src/@dashboard/Pages/Main/Main.scss
@@ -1,7 +1,6 @@
 .Main_Container{
-    padding: 3px 20px ;
-}
-.link{
-    text-decoration: none;
-    list-style: none;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    
 }
