--- a/src/@dashboard/Pages/Orders/Orders.scss
+++ b/src/@dashboard/Pages/Orders/Orders.scss
@@ -27,6 +27,7 @@
 
 
     .Tabel_Header{
+        background: url(/src/assets//Images/bc.jpg) center / cover ;
         width: 100%;
         height: 10%;
         background-color: #fff4;
@@ -35,8 +36,10 @@
 
         h1{
 
-            font-size: 40px;
-
+            font-size: 45px;
+            font-weight: bold;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            
         }
         .Tabel_Body{
             width: 95%;
@@ -49,6 +52,9 @@
 
     table,th,td{
         padding: 1.5rem;
+        &:hover{
+            background-color: #fff2;
+        }
     }
 
     table{
