--- a/src/@dashboard/Pages/SubCategory/Subcategory.scss
+++ b/src/@dashboard/Pages/SubCategory/Subcategory.scss
@@ -1,98 +1,114 @@
-.sub_Container{
-    padding: 10px;
-    background: url("/src/assets/Images/dd.avif") center / cover;
-    height: 100vh;
-    background-color: #fff5;
+.Delvierd{
+    background-color: rgb(0, 255, 21);
+    padding: 5px;
+    border-radius: 10px;
+}
+.pending{
+    background-color: yellow;
+    padding: 5px;
+    border-radius: 10px;
+
+}
+.shipped{
+    background-color: rgb(141, 141, 241);
+    padding: 5px;
+    border-radius: 10px;
+ 
+}
+.canceled{
+    background-color: #de9090;
+    padding: 5px;
+    border-radius: 10px;
 
 
+}
+.Sub_Container{
+    background-color: black;
 
 
-
-    .Sub_Title{
-        margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 8px 0px;
-        background-color: #eee;
-        opacity: 0.8;
-        border-radius: 5px;
-        &:hover{
-            opacity: 1.0;
+    .Tabel_Header{
+        background: url(/src/assets//Images/dde.avif) center / cover ;
+        width: 100%;
+        height: 10%;
+        background-color: #fff4;
+        padding: 2rem 1rem;
+        border-radius: 50px;
+        .Title{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        h1{
+            font-size: 40px;
+            font-weight: bold;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            color: #fff;
         }
+        .Btn{
+            padding: 5px 25px;
+            border-radius: 5px;
+            border: 1px solid #eee;
+            background-color: #fff1;
+            color: #fff;
+            border-color: #fff1;
+            &:hover{
+                background-color: #fff;
+                border-color: #fff;
+                color: black;
 
 
 
-    h4{
-        font-weight: bold;
-        font-size: 25px;
-        font-family: auto;
-        margin-left: 8px;
+            }
+        
+        }
+    }
+        .Tabel_Body{
+            width: 95%;
+            max-height: calc(89% - 0.8rem);
+        }
     
-    }
-   .Link_Add{
-        padding: 6px;
-        border: 1px solid #405189;
-        background-color: #405189;
-        color: #eee;
-        border-radius: 10px;
-        font-family: auto;
-        list-style: none;
-        text-decoration: none;
-        margin-right: 7px;
-
-
-
-    }
+        
     }
 
 
-    .Tabel{
-        margin: 4px;
-        text-align: center;
-        border-radius: 10px;
-        opacity: 0.8;
-        backdrop-filter:blur(7px);
-        box-shadow: 0 .4rem .8rem #fff4;
+    table,th,td{
+        padding: 1.5rem;
         &:hover{
-            opacity: 1.0;
+            background-color: #fff2;
         }
+    }
 
+    table{
+        opacity: 0.7;
+        backdrop-filter:blur(7px);
+        overflow: hidden;
+        background-color: #fffb;
+        border-radius: 20px;
+        text-align: center;
+        box-shadow: 0 .2rem .4rem #fff4;
 
+        Thead{
+            th{
+                background-color: #d5d1defe;
+            }
 
-        thead{
+        }
+        tbody{ 
             tr{
-                th{
-                    background-color: #eee;
-
-
+                &:hover{
+                    background-color: #fff6;
                 }
+
+            }
+            img{
+                width: 38px;
+                height: 38px;
+                border-radius: 50%;
+                margin-right: 5rem;
+                vertical-align: middle;
+
             }
         }
-        .Body{
-            border-radius: 10px;
-           
-            tr{
-                td{
-                    padding: 1rem;
-                    &:hover{
-                        background-color: #eee;
-                    }
 
-                }
-                .Image{
-                    img{
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        text-align: center;
-                    }
-                }
-            }
-        }
-
-    } 
-
-
-
+    }
 }
