--- a/src/@dashboard/Pages/Brands/AddBrand/AddBrand.scss
+++ b/src/@dashboard/Pages/Brands/AddBrand/AddBrand.scss
@@ -1,8 +1,9 @@
-.AddCategory_Head{
+.AddBrand_Head{
     height: 100vh;
 
     h2{
         color: black;
+        
         font-size: 40px;
         font-family: fantasy;
         margin-inline-start: 20px;
