--- a/src/@dashboard/Pages/Category/Category.scss
+++ b/src/@dashboard/Pages/Category/Category.scss
@@ -1,13 +1,12 @@
 
 
 .Category_Container{
-    background-color: black;
+    background-color: transparent;
     border-radius: 10px;
     margin-bottom: 10px;
     
 
     .Tabel_Header{
-        background: url(/src/assets//Images/ddr.jpg) center / cover ;
         width: 100%;
         height: 10%;
         background-color: #fff4;
@@ -22,13 +21,12 @@
             font-size: 40px;
             font-weight: bold;
             font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            color: #fff;
         }
         .Btn{
             padding: 5px 25px;
             border-radius: 5px;
-            border: 1px solid #eee;
-            background-color: #fff1;
+            border: 1px solid black;
+            background-color: black;
             color: #fff;
             border-color: #fff1;
             list-style: none;
