--- a/src/@dashboard/Pages/Coupons/Coupons.scss
+++ b/src/@dashboard/Pages/Coupons/Coupons.scss
@@ -1,24 +1,21 @@
 .Copons{
     height: 100vh;
-    background: url(../../../assets/Images/dd.avif) center / cover;
     h1{
             padding: 18px;
             font-weight: bold;
             font-family: Arial, Helvetica, sans-serif ;
-            color: #fff;
     }
 
     .Copon_Cards{
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        color: #fff;
         padding: 3px;
         margin: 3px;
 
         .Cards{
             padding: 18px 70px;
-            border: 5px solid #fff5;
+            border: 5px solid ;
             border-radius: 5px;
             margin-top: 40px;
             h2{
