--- a/src/@dashboard/Pages/Orders/Orders.scss
+++ b/src/@dashboard/Pages/Orders/Orders.scss
@@ -23,11 +23,10 @@
 
 }
 .order_Container{
-    background-color: black;
+    background-color: transparent;
 
 
     .Tabel_Header{
-        background: url(/src/assets//Images/bc.jpg) center / cover ;
         width: 100%;
         height: 10%;
         background-color: #fff4;
