--- a/src/@dashboard/Pages/Products/EditProducts/EditProducts.scss
+++ b/src/@dashboard/Pages/Products/EditProducts/EditProducts.scss
@@ -5,7 +5,7 @@
         margin: auto;
         width: 45vw;
         h2{
-            color: black;
+            color:#fff;
             padding: 10px;
             margin-inline-start:  20px;
             margin-bottom: 20px;
