--- a/src/@dashboard/Pages/Category/AddCategory/AddCategory.scss
+++ b/src/@dashboard/Pages/Category/AddCategory/AddCategory.scss
@@ -19,6 +19,11 @@
         border-radius: 20px;
         margin: auto;
         box-shadow: 0 0px 1px 0px #fff;
+        #upload-photo{
+            opacity: 0;
+            position: absolute;
+            z-index: -1;
+        }
         input{
             padding: 15px 100px;
             border: 1px solid #fff9;
@@ -26,7 +31,7 @@
             border-radius: 6px;
             box-shadow: 0 0px 1px 0px #fff8;
             color: #405189;
-            margin: 18px 20px;
+            margin: 20px 20px;
             display: block;
             &:hover{
                 color: black;
