--- a/src/@dashboard/Pages/Category/Category.scss
+++ b/src/@dashboard/Pages/Category/Category.scss
@@ -92,4 +92,24 @@
         }
 
     }
+
+    .Table_Btn{
+        background-color: #405189;
+        border: 0.5px solid #405189;
+        padding: 0px 5px;
+        color: #fff;
+        border-radius: 4px;
+        text-decoration: none;
+        margin: 4px;
+        &:hover{
+            background-color: #fff;
+            color: #405189;
+            border: 0.5px solid #fff;
+            padding: 0px 10px;
+
+
+
+        }
+        }
 }
+
