--- a/src/@dashboard/Pages/Brands/AddBrand/AddBrand.scss
+++ b/src/@dashboard/Pages/Brands/AddBrand/AddBrand.scss
@@ -20,6 +20,7 @@
         border-radius: 20px;
         margin: auto;
         box-shadow: 0 0px 1px 0px #fff;
+
         input{
             padding: 15px 100px;
             border: 1px solid #fff9;
@@ -34,6 +35,13 @@
                  border: 1px solid #eee;
             }
         }
+
+        #upload-photo{
+            opacity: 0;
+            position: absolute;
+            z-index: -1;
+        }
+
 
         .Btn_sub{
             border: 1px solid #fff9;
