--- a/src/@auth/pages/Signup/Signup.scss
+++ b/src/@auth/pages/Signup/Signup.scss
@@ -2,12 +2,14 @@
     border: 2px solid #eee;
     background-color: #ffffff;
     width: 60vh;
-    height: 70vh;
+    height: 75vh;
     text-align: center;
     margin: auto;
     box-shadow: 0 1px 2px rgba(56,65,74,.15);
     margin-top: 15px;
     border-radius: 5px;
+    padding: 15px;
+    overflow: hidden;
     .title{
         padding: 8px;
         margin-top: 1px;
@@ -26,19 +28,31 @@
         padding: 10px;
 
         .Form{
-            padding: 5px;
+            padding:10px  2px;
             text-align: start;
+            margin-top: 5px;
+            text-align: center;
+            .input{
+                padding: 14px 2px;
+
+            }
+            .Button{
+                padding: 8px 100px;
+                background-color: #0ab39c;
+                color: #ffffff;
+                border-color: #0ab39c;
+                margin: 8px;
+                &:hover{
+                    background-color: #ffffff;
+                    color: #0ab39c;
+
+                }
+                
+                
+            }
+    
         }
 
-        .Button{
-            padding: 8px 100px;
-            background-color: #0ab39c;
-            color: #ffffff;
-            border-color: #0ab39c;
-            margin: 0;
-            
-            
-        }
 
         .media{
             padding: 10px;
