--- a/src/@dashboard/Pages/Coupons/Coupons.scss
+++ b/src/@dashboard/Pages/Coupons/Coupons.scss
@@ -1,41 +1,49 @@
-.Copons{
-    height: 100vh;
+.coupon_container{
+    width: 120vh;
+    margin: auto;
+
     h1{
-            padding: 18px;
-            font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif ;
+        font-weight: bold;
+        font-size: 30px ;
+        margin: 15px ;
+
     }
 
-    .Copon_Cards{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        padding: 3px;
-        margin: 3px;
 
-        .Cards{
-            padding: 18px 70px;
-            border: 5px solid ;
-            border-radius: 5px;
-            margin-top: 40px;
-            h2{
-                font-size: 45px;
-                font-weight: 500;
-            
-            }
-            P{
-                margin: 0;
-                padding: 0;
-                font-size: 15px;
-                text-align: center;
-                letter-spacing: 10px;
-                font-family: monospace;
-            
 
-            }
+    .Form{
+        padding: 5px;
+        text-align: center;
+        .input{
+            padding: 14px 2px;
+            margin-top: 25px;
+
+        }
+        .Button{
+            padding: 8px 100px;
+            background-color: #0ab39c;
+            color: #ffffff;
+            border-color: #0ab39c;
+            margin: auto;
+            
             
         }
 
-
     }
+
+    .Card_coupon{
+        margin: 15px 0px;
+        background-color: #ffffff;
+        padding: 30px;
+        box-shadow: 0 1px 2px rgba(56,65,74,.15);
+        border-radius: 5px;
+    
+        h2{
+            
+        }
+        p{}
+    }
+
+
+
 }
