--- a/src/@dashboard/Components/Topbar/Topbar.scss
+++ b/src/@dashboard/Components/Topbar/Topbar.scss
@@ -152,9 +152,12 @@
       width: 80px;
       .menu_item {
         color: #4e5156;
+        cursor: pointer;
         .Link {
           text-decoration: none;
           color: #4e5156;
+          cursor: pointer;
+
         }
       }
     }
