--- a/src/@dashboard/Pages/Coupons/Coupons.scss
+++ b/src/@dashboard/Pages/Coupons/Coupons.scss
@@ -25,6 +25,10 @@
             color: #ffffff;
             border-color: #0ab39c;
             margin: auto;
+            &:hover{
+                background-color: #ffffff;
+                color: #0ab39c;
+            }
             
             
         }
